2010-09-28  Johnny Ding  <jnd@chromium.org>

        Reviewed by Adam Barth.

        https://bugs.webkit.org/show_bug.cgi?id=41292
        Add a new parameter to the test plugin to allow specifying a script 
        and a mouse/keyboard event. The specified script will be evaluated
        in the browser when the specified event is received by the plugin.

        * DumpRenderTree/TestNetscapePlugIn/PluginObject.cpp:
        (pluginAllocate):
        * DumpRenderTree/TestNetscapePlugIn/PluginObject.h:
        * DumpRenderTree/TestNetscapePlugIn/main.cpp:
        (NPP_New):
        (handleEventCarbon):
        (handleEventCocoa):

2010-09-28  Simon Fraser  <simon.fraser@apple.com>

        Fix export by adding missing argument.

        * CSSTestSuiteHarness/harness/harness.js:
        (TestSuite.prototype.showResultsForAllTests):

2010-09-28  Kevin Ollivier  <kevino@theolliviers.com>

        [wx] Build fix, add missing import.

        * wx/packaging/build-win-installer.py:

2010-09-28  Simon Fraser  <simon.fraser@apple.com>

        No review
        
        Show which tests have been run by dimming them out in the test list.
        
        Adjust some element sizes.
        
        * CSSTestSuiteHarness/harness/harness.css:
        (#test-list > option.untested):
        (#test-list > option.completed):
        (#output):
        (.output-options):
        * CSSTestSuiteHarness/harness/harness.js:
        (Test):
        (TestSuite.prototype.fillTestList):
        (TestSuite.prototype.updateTestList):
        (TestSuite.prototype.setSelectedChapter):
        (TestSuite.prototype.recordResult):
        (TestSuite.prototype.markTestCompleted):
        (TestSuite.prototype.testCompletionStateChanged):
        (TestSuite.prototype.loadTestStatus):

2010-09-28  Simon Fraser  <simon.fraser@apple.com>

        No review.
        
        Implement export of various queries on the test database, sharing
        code with that which displays results inline.
